--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,10 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Structure</title>
+    <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Basic HTML Page</h1>
-    <p>This is a simple HTML page with the basic structure.</p>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <h1>My Portfolio</h1>
+
+        <h2>Introduction</h2>
+        <p>This is a paragraph introducing the portfolio. It provides an overview of what you can expect to find in this portfolio and the purpose of the website.</p>
+
+        <h3>About Me</h3>
+        <p>Here is some information about myself. This section will contain details about my background, skills, and interests.</p>
+
+        <h2>Projects</h2>
+        <p>In this section, I will showcase various projects I have worked on. Each project will be described in detail, including the technologies used and the outcomes.</p>
+
+        <h3>Featured Project</h3>
+        <p>One of my most notable projects is featured here. This project highlights my skills and accomplishments, demonstrating the impact of my work.</p>
+
+        <a href="https://example.com">
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width: 200px; height: auto;">
+        </a>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+    </footer>
 </body>
 </html>
