--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,6 +14,7 @@
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="tweets.html">Contact</a></li>
             </ul>
         </nav>
     </header>
