added edited index.html and tweets.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -15,20 +15,26 @@
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <h2>Embedded Tweet</h2>
-        </blockquote>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Billionaire Larry Ellison says a vast AI-fueled surveillance system can ensure &#39;citizens will be on their best behavior&#39; <a href="https://t.co/sSQfdpxw3y">https://t.co/sSQfdpxw3y</a></p>&mdash; Insider Tech (@TechInsider) <a href="https://twitter.com/TechInsider/status/1835352478260318347?ref_src=twsrc%5Etfw">September 15, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <article>
+            <h2>Embedded Tweet</h2>
+          
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Billionaire Larry Ellison says a vast AI-fueled surveillance system can ensure &#39;citizens will be on their best behavior&#39; <a href="https://t.co/sSQfdpxw3y">https://t.co/sSQfdpxw3y</a></p>&mdash; Insider Tech (@TechInsider) <a href="https://twitter.com/TechInsider/status/1835352478260318347?ref_src=twsrc%5Etfw">September 15, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-        <p><a href="index.html">Back to Home</a></p>
+            <p><a href="index.html">Back to Home</a></p>
+        </article>
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+        <p>Made by Lungelihle Jafta - <a href="https://example.com" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
