--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -10,37 +10,43 @@
         <h1>Welcome to My Portfolio</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="tweets.html">Contact</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <h1>My Portfolio</h1>
+        <article>
+            <h1>My Portfolio</h1>
 
-        <h2>Introduction</h2>
-        <p>This is a paragraph introducing the portfolio. It provides an overview of what you can expect to find in this portfolio and the purpose of the website.</p>
+            <h2>Introduction</h2>
+            <p>This is a paragraph introducing the portfolio. It provides an overview of what you can expect to find in this portfolio and the purpose of the website.</p>
 
-        <h3>About Me</h3>
-        <p>Here is some information about myself. This section will contain details about my background, skills, and interests.</p>
+            <h3>About Me</h3>
+            <p>Here is some information about myself. This section will contain details about my background, skills, and interests.</p>
 
-        <h2>Projects</h2>
-        <p>In this section, I will showcase various projects I have worked on. Each project will be described in detail, including the technologies used and the outcomes.</p>
+            <h2>Projects</h2>
+            <p>In this section, I will showcase various projects I have worked on. Each project will be described in detail, including the technologies used and the outcomes.</p>
 
-        <h3>Featured Project</h3>
-        <p>One of my most notable projects is featured here. This project highlights my skills and accomplishments, demonstrating the impact of my work.</p>
+            <h3>Featured Project</h3>
+            <p>One of my most notable projects is featured here. This project highlights my skills and accomplishments, demonstrating the impact of my work.</p>
 
-        <a href="https://example.com">
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width: 200px; height: auto;">
-        </a>
+            <a href="https://example.com">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width: 200px; height: auto;">
+            </a>
+        </article>
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+        <p>Made by Lungelihle Jafta - <a href="https://example.com" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
