added edited index.html and tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,18 +8,14 @@
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="tweets.html">Tweets</a></li>
             </ul>
-        </nav>
+        
     </header>
-    
     <main>
         <article>
             <h1>My Portfolio</h1>
@@ -41,12 +37,12 @@
             </a>
         </article>
         <aside>
-            <p>Placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
     <footer>
-        <p>Made by Lungelihle Jafta - <a href="https://example.com" target="_blank">here</a></p>
+        <p>Made by Lungelihle Jafta - <a href="https://github.com/ljafta39/My_First_Portfolio/" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
