--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-        <p>Made by Lungelihle Jafta - <a href="https://example.com" target="_blank">here</a></p>
+        <p>Made by Lungelihle Jafta - <a href="https://github.com/ljafta39/My_First_Portfolio/" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
