--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,18 +8,14 @@
 <body>
     <header>
         <h1>My Tweets</h1>
-        <nav>
+        
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="tweets.html">Tweets</a></li>
             </ul>
-        </nav>
     </header>
-    
     <main>
         <article>
             <h2>Embedded Tweet</h2>
@@ -29,7 +25,7 @@
             <p><a href="index.html">Back to Home</a></p>
         </article>
         <aside>
-            <p>Placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
