--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <title>My First Portfolio</title>
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         <h1>Welcome to My Portfolio</h1>
             <ul>
